# mozim-cli

./: Cargo.toml
src/: main.rs
